fixing broken style

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-editor-navigation-item.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-editor-navigation-item.less
@@ -182,7 +182,7 @@
 .show-validation .umb-sub-views-nav-item > a.-has-error {
     color: @red;
 
-    &::after {
+    &::before {
         background-color: @red;
     }
 }
